[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Textures/UI_Textures/background.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI_Textures/tilox.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI_Textures/play_btn.png" type="Texture" id=4]
[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
resource_name = "menu collection"
tracks/0/type = "value"
tracks/0/path = NodePath("tilox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, -60 ), Vector2( 128, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start_btn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 104, 340 ), Vector2( 104, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Info_lbl:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 0 ), Vector2( 256, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -160, 160 ), Vector2( 128, 160 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Info_pnl:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 0 ), Vector2( 256, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "menu_diffusion"
tracks/0/type = "value"
tracks/0/path = NodePath("tilox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 96 ), Vector2( 128, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start_btn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 104, 200 ), Vector2( 104, 340 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Info_lbl:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 0 ), Vector2( 400, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 160 ), Vector2( -160, 160 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Info_pnl:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 0 ), Vector2( 400, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "start_button"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Start_btn:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start_btn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 96, 192 ), Vector2( 104, 200 ) ]
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )
colors = [ Color( 0.784314, 0.254902, 0.254902, 1 ), Color( 0.137255, 0.666667, 0.843137, 1 ), Color( 0.215686, 0.843137, 0.294118, 1 ), Color( 0.960784, 0.431373, 0, 1 ), Color( 0.745098, 0.745098, 0.333333, 1 ), Color( 0.568627, 0.137255, 0.431373, 1 ) ]

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -160, 160 )
scale = Vector2( 0.771084, 0.761905 )
texture = ExtResource( 2 )

[node name="tilox" type="Sprite" parent="."]
position = Vector2( 128, -60 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 3 )

[node name="Start_btn" type="Button" parent="."]
margin_left = 104.0
margin_top = 340.0
margin_right = 168.0
margin_bottom = 404.0
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Info_pnl" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 400.0
margin_right = 514.0
margin_bottom = 320.0

[node name="Info_lbl" type="Label" parent="."]
margin_left = 400.0
margin_right = 514.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "This game made
for 
Ludum Dare 
45

Nordicebear
Games
2019

v1.2"
align = 1
valign = 1

[node name="main_menu_anim" type="AnimationPlayer" parent="."]
"anims/menu collection" = SubResource( 5 )
anims/menu_diffusion = SubResource( 4 )
anims/start_button = SubResource( 3 )

[node name="color_change_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="pressed" from="Start_btn" to="." method="_on_Start_btn_pressed"]
[connection signal="animation_finished" from="main_menu_anim" to="." method="_on_main_menu_anim_animation_finished"]
[connection signal="timeout" from="color_change_timer" to="." method="_on_color_change_timer_timeout"]
